k8s-deployments/fidelite-service-deployment.yml
# fidelite-service deployment yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fidelite-deployment
  labels:
    app: fidelite
spec:
  replicas: 3 #We always want more than 1 replica for HA
  selector:
    matchLabels:
      app: fidelite
  template:
    metadata:
      labels:
        app: fidelite
    spec:
      containers:
      - name: fidelite #1st container
        image: dockeraminou/poc:fidelite-service #Dockerhub image
        ports:
        - containerPort: 8081 #Exposes the port 8080 of the container
          name: fidelite-port
        
        livenessProbe:
          httpGet:
            path: /fidelite
            port: 8081 #Name or port number
          initialDelaySeconds: 5
          timeoutSeconds: 1
      
---
kind: Service
apiVersion: v1
metadata:
  name: fidelite-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: fidelite
  ports:
  - name: fidelite-port
    protocol: TCP
    port: 8081
    targetPort: 8081
