k8s-deployments/virement-service-deployment.yml
# virement-service deployment yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virement-deployment
  labels:
    app: virement
spec:
  replicas: 3 #We always want more than 1 replica for HA
  selector:
    matchLabels:
      app: virement
  template:
    metadata:
      labels:
        app: virement
    spec:
      containers:
      - name: virement #1st container
        image: dockeraminou/poc:virement-service #Dockerhub image
        ports:
        - containerPort: 8081 #Exposes the port 8080 of the container
          name: virement-port
        
        livenessProbe:
          httpGet:
            path: /virement
            port: 8081 #Name or port number
          initialDelaySeconds: 5
          timeoutSeconds: 1
      
---
kind: Service
apiVersion: v1
metadata:
  name: virement-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: virement
  ports:
  - name: virement-port
    protocol: TCP
    port: 8081
    targetPort: 8081
