k8s-deployments/ingress-gateway.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /virement/*
        backend:
          serviceName: virement-service
          servicePort: 8081          
      - path: /fidelite/*
        backend:
          serviceName: fidelite-service
          servicePort: 8082
